# sotra-build

./: README.md  output.xlsx  pyproject.toml
sotra/: __main__.py  bridge.py  constants.py  doc.py  helpers.py  obs.py  setup_parser.py
