[tool.poetry]
name = "sotra"
version = "0.1.0"
description = ""
authors = ["Thomas Østgulen <tostgulen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
openpyxl = "^3.1.2"

[tool.poetry.scripts]
sotra-build = "sotra.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
